fix z-index pada navbar

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    box-shadow: 0px 0px 22px 0px rgba(21, 32, 37, 0.8)
+    box-shadow: 0px 0px 22px 0px rgba(21, 32, 37, 0.8);
+    z-index: 1;
 }
 
 .logo {
@@ -227,18 +228,14 @@ footer p {
 @media screen and (max-width: 1228px) {
     .content {
         position: relative;
-        /* background-color:teal; */
         overflow: hidden;
         border-radius: 10px;
     }
 
     .content img {
         position: absolute;
-        /* box-shadow: 0px 0px 22px 0px rgba(29, 37, 41, 0.8); */
-
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-
         z-index: -1;
         margin-right: 0;
         width: 100%;
